[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Paddle.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 61 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 4 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Upper" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Upper"]
position = Vector2( 0, -63 )
shape = SubResource( 2 )

[node name="Lower" type="Area2D" parent="."]
position = Vector2( 0, 31 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lower"]
position = Vector2( 0, 33 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Upper" to="." method="_on_Upper_body_entered"]
[connection signal="body_exited" from="Upper" to="." method="_on_Upper_body_exited"]
[connection signal="body_entered" from="Lower" to="." method="_on_Lower_body_entered"]
[connection signal="body_exited" from="Lower" to="." method="_on_Lower_body_exited"]
